--- a/javascript/counter_app/index.html
+++ b/javascript/counter_app/index.html
@@ -4,8 +4,94 @@
   <meta charset="utf-8">
   <title>カウンター</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+  <style>
+    #main{
+      width: 240px;
+      height: 400px;
+      margin: 20px;
+      border: 1px solid #000000;
+    }
+    #display{
+      width: 200px;
+      height: 200px;
+      line-height: 200px;
+      margin: 10px auto;
+      text-align: center;
+      font-size: 100px;
+    }
+    #keisan{
+      overflow: hidden;
+    }
+    #plusBtn, #minusBtn{
+      width: 80px;
+      height: 80px;
+      line-height: 80px;
+      text-align: center;
+      float: left;
+      margin: 20px;
+      font-size: 50px;
+      font-weight: bold;
+      cursor: pointer;
+    }
+    #plusBtn{
+      background-color: #b8e986;
+    }
+    #minusBtn{
+      background-color: #fabdc4;
+    }
+    #resetBtn{
+      width: 200px;
+      height: 40px;
+      line-height: 40px;
+      background-color: #a9f5f2;
+      text-align: center;
+      font-size: 20px;
+      font-weight: bold;
+      cursor: pointer;
+      margin: 0 auto;
+    }
+    .curve{
+      border-radius: 8px;
+    }
+  </style>
 </head>
+
 <body>
-  カウンターアプ
+  <h1>カウンター</h1>
+  <hr>
+  <div id="main">
+    <div id="display">0</div>
+    <div id="keisan">
+      <div id="plusBtn" class="curve">+</div>
+      <div id="minusBtn" class="curve">-</div>
+    </div>
+    <div id="resetBtn" class="curve">reset</div>
+  </div>
 </body>
+
+<script>
+  $(function(){
+    var count = 0;
+    $('#plusBtn').on('click', function(){
+      count += 1;
+      console.log(count);
+      display();
+    })
+
+    $('#minusBtn').on('click', function(){
+      count -= 1;
+      console.log(count);
+      display();
+    })
+
+    $('#resetBtn').on('click',function(){
+      count = 0;
+      display();
+    })
+
+    function display(){
+      $('#display').text(count);
+    }
+  })
+</script>
 </html>
