--- a/javascript/scroll_button/index.html
+++ b/javascript/scroll_button/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="utf-8">
-  <title>カウンター</title>
+  <title>スクロールボタン</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
   <style>
     body{
